<resources>
    <string name="nav_open">Show navigation</string>
    <string name="nav_close">Hide navigation</string>
    <string name="app_name">EEGMobileClient</string>
    <string name="app_form">Form</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_pokus">Pokus</string>
    <string name="app_welcome">Welcome to EEG Base!</string>
    <string name="app_underDevelopment">This application is currently under development, so its features
        are limited and maybe bugged sometimes. Thank you for your patience and bug reporting on GitHub project site!</string>
    <string name="app_intro">This application was created in order to cover basic needs of EEG researchers.\n
        \n
        By clicking on drop-down menu in left upper corner you can select or create workspace.\n       
        \n
        Hopefully you will find this application useful!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="task_progress_msg">Progress:</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="no_record">No record available</string>
    <string name="task_started_msg">Task started!</string>
    <string name="task_cancelled_msg">Task cancelled!</string>
    <string name="task_complete_msg">Task complete!</string>
    <string name="zero_percent">0%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="menu_trigger_config_change">Trigger Config Change</string>
    <string name="task_running">Probíhá stahování dat ze serveru</string>
    <string name="discard">Discard</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="delete_folder">Delete workspace</string>
    <string name="delete_formr">Delete form</string>
    <string name="edit">Edit</string>
    <string name="edit_preview_fields">Edit preview fields</string>
    <string name="rename">Rename</string>
    <string name="save_changes">Save changes</string>
    <string name="settings_workspace_name">Workspace name</string>
    <string name="edit_workspace">Edit workspace</string>
    <string name="app_settings">Login Settings</string>
    <string name="settings_optional">Optional login</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_url">Service URL</string>
    <string name="settings_saved">Settings saved.</string>
    <string name="settings_login">Login</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_layout_name">Layout name</string>
    <string name="settings_layout_selected">Selected</string>
    <string name="settings_new">New ...</string>
    <string name="settings_add">Add</string>
    <string name="form_section">Form</string>
    <string name="form_layout_section">Layout</string>
    <string name="form_layout_generated">-generated</string>
    <string name="form_fields_section">Fields</string>
    <string name="form_preview_section">Form preview</string>
    <string name="form_plus">Add...</string>
    <string name="form_label">Label</string>
    <string name="form_add">Add form</string>
    <string name="form_save">Save form</string>
    <string name="form_new">New Form</string>
    <string name="form_new_field">Add field</string>
    <string name="form_refresh">Download forms and layouts</string>
    <string name="form_edit_layout">Edit layout</string>
    <string name="form_save_layout">Save layout</string>
    <string name="form_create_layout">Create new layout ...</string>
    <string name="form_add_fields_to_layout">Add fields to layout ...</string>
    <string name="form_edit_layout_dialog">Edit layout ...</string>
    <string name="form_duplicate_layout">Duplicate selected layout</string>
    <string name="form_create_layout_title">Create new layout</string>
    <string name="form_move">Move fields</string>
    <string name="form_name">Form Name</string>
    <string name="form_layouts">Select Layout</string>
    <string name="form_type">Select Form Type</string>
    <string name="form_create_type">Create new form type ...</string>
    <string name="form_manager">Form manager</string>
    <string name="form_preview_fields">Preview</string>
    <string name="form_create_fields">Create fields ...</string>
    <string name="form_edit_field">Edit field</string>
    <string name="form_create_form">Create form</string>
    <string name="form_create_type_title">Create New Form Type</string>
    <string name="form_fields">Select field</string>
    <string name="form_list_of_fields">List Of Fields</string>
    <string name="form_previewMajor">Preview Major</string>
    <string name="form_previewMinor">Preview Minor</string>
    <string name="form_change_preview">Change preview fields</string>
     <string name="form_empty_list">No data. Tap to create new form.</string>
    <string name="field_label">Label</string>
    <string name="field_add">Add field</string>
    <string name="field_name">Field Name</string>
    <string name="field_type">Type</string>
    <string name="field_options">Options</string>
    <string name="field_addToLayout">Add to layout</string>
    <string name="field_createField">Create field</string>
    <string name="field_save">Save field</string>
    <string name="field_noUnusedFields">No unused fields</string>
    <string name="field_exists">The field name already exists</string>
    <string name="field_was_created">The field was created</string>
    <string name="field_was_edited">The field was edited</string>
    <string name="field_description">Description</string>
    <string name="field_description_u">description</string>
    <string name="field_datatype">Data type</string>
    <string name="field_minLength">Minimum length</string>
    <string name="field_maxLength">Maximum length</string>
    <string name="field_minValue">Minimum value</string>
    <string name="field_maxValue">Maximum value</string>
    <string name="field_defaultValue">Default value</string>
    <string name="field_newItem">Add item</string>
    <string name="field_newForm">Select Form</string>
    <string name="person_add">Add person</string>
    <string name="person_name">Name</string>
    <string name="person_surname">Surname</string>
    <string name="person_birthday">Birthday</string>
    <string name="person_gender">Gender</string>
    <string name="person_mail">Email</string>
    <string name="person_notes">Notes</string>
    <string name="person_lefthand">Left-handedness</string>
    <string name="person_phone">Phone number</string>
    <string name="person_owner">Owner</string>
    <string name="person_subject">Subject</string>
    <string name="person_age">Age</string>
    <string name="mandatory">Mandatory</string>
    <string name="optional">Optionable</string>
    <string name="drawer_createNewfolder">Create New Folder</string>
    <string name="drawer_new_workspace">New Workspace</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="error_offline">Connection is unavailable. Request could not be completed.</string>
    <string name="error_connection">Connection to server issues occurred. Try again later.</string>
    <string name="error_date_comparison">Reservation action cannot end before it even started!</string>
    <string name="error_unknown_host">Invalid host name/address!</string>
    <string name="error_invalid_password">Password must be entered!</string>
    <string name="error_invalid_workspace_name">Workspace name must be entered!</string>
    <string name="error_ivalid_workspace_name_exists">The workspace already exists!</string>
    <string name="error_invalid_url">Entered value is invalid URL!</string>
    <string name="error_invalid_username">Username must be an email!</string>
    <string name="error_host_unreach">Host unavailable (no route exist). Is hostname/IP correct?</string>
    <string name="error_host_timeout">Connection timeout. Try again.</string>
    <string name="error_host_con_refused">Connection refused. Are your credentials correct?</string>
    <string name="error_http_400">Application made invalid request towards server.</string>
    <string name="error_http_401">User authorization check failed. Check your login information.</string>
    <string name="error_http_403">You do not have permissions for such request.</string>
    <string name="error_http_403_layout_update">You do not have permissions for update:\n</string>
    <string name="error_http_404">Location not found. This is probably a server issue, but check your server URL just to
        be sure.</string>
    <string name="error_http_404_data">No data stored on the server.</string>
    <string name="error_http_405">Request method not allowed.</string>
    <string name="error_http_408">Request timed out.</string>
    <string name="error_http_409">The form name and layout name already exists on the server:\n</string>
    <string name="error_http_500">Internal server error.</string>
    <string name="error_http_503">Service is currently unavailable. Try again later.</string>
    <string name="error_no_file_selected">No file selected!</string>
    <string name="error_no_experiment_selected">No experiment selected!</string>
    <string name="error_no_group_selected">No research group selected!</string>
    <string name="error_invalid_mail_format">: Invalid email format!</string>
    <string name="error_invalid_date_format">: Invalid date format!</string>
    <string name="error_ssl">SSL connection fell apart. Try again.</string>
    <string name="error_no_type_selected">No electrode type selected!</string>
    <string name="error_no_fix_selected">No electrode fix selected!</string>
    <string name="error_no_scenario_selected">No scenario selected!</string>
    <string name="error_no_subject_selected">No subject selected!</string>
    <string name="error_no_artifact_selected">No artifact selected!</string>
    <string name="error_no_digitization_selected">No digitization selected!</string>
    <string name="error_no_electrode_system_selected">No electrode system selected!</string>
    <string name="error_no_electrode_location_selected">No electrode location selected!</string>
    <string name="error_no_weather_selected">No weather selected!</string>
    <string name="error_time_start_after_end">Time of start cannot be after the end time!</string>
    <string name="error_form_type_exists">The form type already exists</string>
    <string name="error_layout_name_exists">The layout name already exists</string>
    <string name="error_empty_field">Field must be filled</string>
    <string name="error_empty_layout">Layout must be filled</string>
    <string name="error_empty_type">Form type must be filled</string>
    <string name="error_selected_type">Form type must be selected</string>
    <string name="error_empty_form_name">Form name must be filled</string>
    <string name="error_layout_no_fields">Add fields to layout (Press "Edit layout button ...")</string>
    <string name="error_field_max_length">: max length is&#160;</string>
    <string name="error_field_min_length">: min length is&#160;</string>
    <string name="error_field_max_value">: max value is&#160;</string>
    <string name="error_field_min_value">: min value is&#160;</string>
    <string name="field_empty_name">Empty field name</string>
    <string name="field_fill_item_name">Fill item name</string>
    <string name="working_ws_credentials">Verifying login information…</string>
    <string name="working_ws_layouts">Fetching available layouts…</string>
    <string name="working_ws_updating_layouts">Updating layouts</string>
    <string name="working_ws_uploading_layouts">Uploading modified layouts</string>
    <string name="dialog_button_ok">OK</string>
</resources>