<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/settings_workspaceName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_workspace_name" />

    <EditText
        android:id="@+id/settings_workspace_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/settings_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings_optional"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/settings_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_username" />

   <EditText
        android:id="@+id/settings_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/settings_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_password" />

    <EditText
        android:id="@+id/settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/settings_url_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_url" />

    <EditText
        android:id="@+id/settings_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/settings_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/settings_cancel" />

        <Button
            android:id="@+id/settings_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/dialog_button_ok" />
    </LinearLayout>

</LinearLayout>