<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/field_name" />

    <EditText
        android:id="@+id/field_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView01"
        android:ems="10"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/field_label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/field_edit_name"
        android:text="@string/field_type" />

    <Spinner
        android:id="@+id/field_spinner_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/field_label_type" />

    <TextView
        android:id="@+id/field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/field_spinner_type"
        android:text="@string/field_label" />

    <EditText
        android:id="@+id/field_edit_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/field_spinner_type"
        android:layout_below="@+id/field_label"
        android:ems="10"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/field_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/field_edit_Label"
        android:layout_alignRight="@+id/field_edit_Label"
        android:layout_below="@+id/field_edit_Label"
        android:text="@string/field_createField" />

    <TextView
        android:id="@+id/field_options_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/field_add_button"
        android:layout_below="@+id/field_add_button"
        android:text="@string/field_options" />
  
</RelativeLayout>