<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TextView
        android:id="@+id/field_label_selectField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/form_fields" />

    <Spinner
        android:id="@+id/field_spinnerField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/field_label_selectField" />
    
    <TextView
        android:id="@+id/field_noUnusedFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/field_spinnerField"
        android:padding="5dp"
        android:text="@string/field_noUnusedFields"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/field_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/field_noUnusedFields"
        android:text="@string/field_label" />

    <EditText
        android:id="@+id/field_edit_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/field_label"
        android:ems="10" />
    
</RelativeLayout>